--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -11,7 +11,9 @@
 ** solution code for is in src folder **
 
 ## Mata Nui's Cookie
-challenge description here
+This challenge was categorized as crypto but it has nothing to do with crypto really...
+We get an image this image
+![](src/matanui.png)
 
 ### Solution
 
