--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -16,21 +16,29 @@ We get an image this image
 ![](src/matanui.png)
 
 ### Solution
+> Since we know the first five chars must be `X-MAS`, we can deduce that vertical, horizontal, and diagonal lines are solid, and curves must avoid the circles. All other patterns are invisible. We can then match each picture with a letter of the alphabet and get the flag.
 
-> solution [here](src/AAAA.py)
 ### Flag
+`X-MAS{MATANUIHASPREPAREDTHECOOKIES}`
 
 ### Notes
+fun but too easy haha.
 
 ## DeFUNct Ransomware
-challenge description here
+This is a textbook RSA problem. We get a text file containing `n` and `e`, and another encrypted file.
 
 ### Solution
+> The first thing we do is throw the large `n` into a defactorization tool, which in this case we used this [online calculator](https://www.alpertron.com.ar/ECM.HTM). It turns out that this number is not a product of two large primes. 
+`n (1233 digits) = a**2 (309 digits) * b**2 (309 digits)`
+> But since p and q have to be coprine, we can assume one is `a**2` and the other is `b**2`. We can calculate all the needed parameters and get p, q, phi and finally d. Now we just have to decrypt with `c**d mod n` to get the plaintext!
+![](src/todolist.png)
 
-> solution [here](src/AAAA.py)
+> solution [here](src/rsa.py)
 ### Flag
+`X-MAS{yakuhito_should_n0t_b3_0n_th3_n@ughty_l1st_941282a75d89e080}`
 
 ### Notes
+This is similar to other simple crypto problems. Usually you either get a small e or easily factorizable n or some other vulnerability.
 
 ## Robin's Wish
 challenge description here
