--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -63,6 +63,7 @@ Then we can figure out that the left column is like to be the XOR of our input a
 X-MAS{54n74_15_b4d_47_l1c3n53_ch3ck1n6}}
 ### Notes
 
+
 ## Reverthable X-Math
 challenge description here
 
@@ -74,7 +75,7 @@ challenge description here
 ### Notes
 
 ## SN0WVERFL0W
-challenge description here
+This is a simple bof problem. Only NX is enabled, so there is no canary or PIE.ls
 
 ### Solution
 
