--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -34,6 +34,7 @@ This is a textbook RSA problem. We get a text file containing `n` and `e`, and a
 ![](src/todolist.png)
 
 > solution [here](src/rsa.py)
+
 ### Flag
 `X-MAS{yakuhito_should_n0t_b3_0n_th3_n@ughty_l1st_941282a75d89e080}`
 
@@ -52,15 +53,14 @@ challenge description here
 
 ## Santa's crackme
 Input the license key and the binary will tell you correct or not
-![](src/stacra.png)
+![](src/stacra.PNG)
 ### Solution
-Use ltrace and input a LONG key like this
-![](src/stacra1.png)
-Then we can figure out that the left column is like to be the XOR of our input and `something` and the right column is XOR of `flag` and `something` , So Let's run the binary again with input = right column then get the flag(with ltrace on).
+> Use ltrace and input a LONG key like this
+![](src/stacra1.PNG)
+> Then we can figure out that the left column is like to be the XOR of our input and `something` and the right column is XOR of `flag` and `something` , So Let's run the binary again with input = right column then get the flag(with ltrace on).
 
-> solution [here](src/AAAA.py)
 ### Flag
-X-MAS{54n74_15_b4d_47_l1c3n53_ch3ck1n6}}
+`X-MAS{54n74_15_b4d_47_l1c3n53_ch3ck1n6}}`
 ### Notes
 
 
@@ -75,14 +75,20 @@ challenge description here
 ### Notes
 
 ## SN0WVERFL0W
-This is a simple bof problem. Only NX is enabled, so there is no canary or PIE.ls
-
+This is a simple bof problem. Only NX is enabled, so there is no canary or PIE. 
+The program asks you if you want to build a snowman, takes a line of input, then sends a line in reply. The challenge does not contain source code, but it does attach a dockerfile from ubuntu 18.04.
 ### Solution
+> I threw the binary into IDA because it was stripped and I didn't want to reverse it with gdb. You can see that there is a variable `flag` stored in the binary(in plaintext), but it is **redacted** in the given binary so you must print it out on the server. Also we can read the elfsymbols from gdb.
 
-> solution [here](src/AAAA.py)
+> After obtaining all these addresses, we can do a simple rop and print out the flag. The exploit works as follows.
+![](src/snowman.png)
+> solution [here](src/expsnowmen.py)
+
 ### Flag
+`X-MAS{700_much_5n000w}`
 
 ### Notes
+I didn't try to get shell because I found the flag in the binary. On second thought, if we had to read the flag from another file on teh server, we could have chained rop and read input after leaking libc.
 
 ## Sequel Fun
 challenge description here
