--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -89,7 +89,7 @@ The program asks you if you want to build a snowman, takes a line of input, then
 `X-MAS{700_much_5n000w}`
 
 ### Notes
-I didn't try to get shell because I found the flag in the binary. On second thought, if we had to read the flag from another file on teh server, we could have chained rop and read input after leaking libc.
+I didn't try to get shell because I found the flag in the binary. On second thought, if we had to read the flag from another file on the server, we could have chained rop and read input after leaking libc.
 
 ## Sequel Fun
 challenge description here
