--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -1,11 +1,11 @@
 # X-MAS CTF 2019 writeup
 * 2019/12/13 - 2019/12/20
-* Crypto: Mata Nui's Cookie, DeFUNct Ransomware, Robin's Wish
-* Reverse: Santa's crackme, Reverthable X-Math
-* Binary: SN0WVERFL0W
-* Web: Sequel Fun
-* PPC: Orakel
-* Misc: FUNction Plotter, SNT DCR SHP
+* Crypto: [Mata Nui's Cookie](#Mata-Nui's-Cookie), [DeFUNct Ransomware](#DeFUNct-Ransomware), [Robin's Wish](#Robin's-Wish)
+* Reverse: [Santa's crackme](#Santa's-crackme), [Reverthable X-Math](#Reverthable-X-Math)
+* Binary: [SN0WVERFL0W](#SN0WVERFL0W)
+* Web: [Sequel Fun](#Sequel-Fun)
+* PPC: [Orakel](#Orakel)
+* Misc: [FUNction Plotter](#FUNction-Plotter), [SNT DCR SHP](#SNT-DCR-SHP)
 
 ** Sanity checks and forensics are not included **
 ** solution code for is in src folder **
@@ -42,11 +42,15 @@ This is a textbook RSA problem. We get a text file containing `n` and `e`, and a
 This is similar to other simple crypto problems. Usually you either get a small e or easily factorizable n or some other vulnerability.
 
 ## Robin's Wish
-challenge description here
+Connect to server and we can get the codeword. We can test our message and get the codeword on the server. e.g. input:2 -> output:4 , input:'gg' -> output: 700713841 == `((103*256 + 103)^2)` 
 
 ### Solution
+> First we assume the codeword should be the square of the message, BUT we check the codeword of flag and it is not a perfect square. So we test 10^x (x = 0 -> inf), and the result is usually its square. But when we reach x = 104 ,the output is not as expected. We found the border between 13e104 to 14e104. Then we guess the encryption formula = `x^2 mod(blah)`, and found blah to be the distance between square(14e104) and its codeword. 
 
-> solution [here](src/AAAA.py)
+> Then we realized this is RSA when e=2! So we googled and found the [rabin system](https://en.wikipedia.org/wiki/Rabin_cryptosystem) which is exactly the same! We implemented the decryption algorithm and got the flag.
+
+![](src/rabin.png)
+> solution [here](src/sqrt.py)
 ### Flag
 
 ### Notes
@@ -55,7 +59,7 @@ challenge description here
 Input the license key and the binary will tell you correct or not
 ![](src/stacra.PNG)
 ### Solution
-> Use ltrace and input a LONG key like this
+> Use ltrace and input a LONG key like this.
 ![](src/stacra1.PNG)
 > Then we can figure out that the left column is like to be the XOR of our input and `something` and the right column is XOR of `flag` and `something` , So Let's run the binary again with input = right column then get the flag(with ltrace on).
 
@@ -70,7 +74,7 @@ This is a simple LISP program with a short output
 > source [here](src/task.lsp)
 ### Solution
 > Go to an online compiler and test some 1-byte different input, figuring out that the same character result to same answer regardless of the location (1 to 1 function). 
-Observe the output there would be a flag with length 32, then test one bit by one bit and get the flag.
+> We can observe the output and see that the flag has length 32, then we can test the bits one by one and get the flag.
 ### Flag
 `X-MAS{= l0v3 (+ 5t4llm4n 54n74)}`
 ### Notes
@@ -92,14 +96,18 @@ The program asks you if you want to build a snowman, takes a line of input, then
 I didn't try to get shell because I found the flag in the binary. On second thought, if we had to read the flag from another file on the server, we could have chained rop and read input after leaking libc.
 
 ## Sequel Fun
-challenge description here
+We see a typical login prompt.
 
 ### Solution
+> Since the challenge name says 'sequel', we can reasonably assume that the solution is simple SQL injection. We test some simple payloads from lab exercises and discover that 'o', 'O' and '1' are forbidden. So the exploit is straightforward:
+`admin' AND 2=2 -- `
+![](src/flag.png)
 
-> solution [here](src/AAAA.py)
 ### Flag
+`X-MAS{S0_1_c4n_b3_4dmin_w1th0ut_7h3_p4ssw0rd?}`
 
 ### Notes
+.....this is even easier than our lab practices....
 
 ## Orakel
 challenge description here
@@ -112,25 +120,32 @@ challenge description here
 ### Notes
 
 ## FUNction Plotter
-challenge description here
+We connect to the server and is required to answer 961 math problems such as `f(23,4)=?`. 
 
 ### Solution
+> We tried for a while. First I thought it was a programming problem. Maybe we had to answer the mean or sum of the two numbers before the program timed out. After some tries we discovered that the only valid answers were 0 and 1. If we correctly guessed the number we get 'Good!', so I decided to write an automated script and send 0's to see which answers were 0 and which were 1. I thought the sequence of 0's and 1's would translate to the flag string or something, but after two tries the sequences were entirely different so I discarded that idea.
 
-> solution [here](src/AAAA.py)
+> After a while my boyfriend told me the math problems were coordinates, so I reran my script and recorded the coordinates, then printed out the matrix. 961 is the square of 31, which is definitely something like QRcode. We solved another QRcode problem last time so we threw the image matrix into this [site](https://bahamas10.github.io/binary-to-qrcode/?fbclid=IwAR2ijmgcNm_NJe6Yb_DDIs2eTJuKeGvAq3YgqsBjZp_pGYYroHcaTE01PUg) and got this QRcode. Scan it and we get our flag!
+
+![](src/qrcode.png)
+
+> solution [here](src/func.py)
 ### Flag
-
+`X-MAS{Th@t's_4_w31rD_fUnCt10n!!!_8082838205}`
 ### Notes
+Fun challenge! 
 
 ## SNT DCR SHP
-challenge description here
+We connect to the server and enter Santa's decoration shop! It's a menu challenge like the pwn challenges. In the challenge we can: add new decoration, view shopping list, or ask santa for suggestion(print source code).
 
 ### Solution
+> From the source code we can see two functions `add_item()` and `print_decoration()`. 
+![](src/additem.png)
+![](src/printdeco.png)
+> After we add decorations, the `type` and `quantity` are directly saved to `items` with sanitization. Then when we try to print the list of decorations, we have a format string vulnerability. A bit of googling brings us to this [bug report](http://lucumr.pocoo.org/2016/12/29/careful-with-str-format/), so we can control `type` to input a malicious format string! The final exploit is as follows:
 
-> solution [here](src/AAAA.py)
+![](src/pyexp.png)
 ### Flag
-
+as above...
 ### Notes
-
-
-
-markdown [cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
+Fun challenge! Learned something about python format strings!
