--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -34,7 +34,6 @@ This is a textbook RSA problem. We get a text file containing `n` and `e`, and a
 ![](src/todolist.png)
 
 > solution [here](src/rsa.py)
-
 ### Flag
 `X-MAS{yakuhito_should_n0t_b3_0n_th3_n@ughty_l1st_941282a75d89e080}`
 
@@ -42,7 +41,7 @@ This is a textbook RSA problem. We get a text file containing `n` and `e`, and a
 This is similar to other simple crypto problems. Usually you either get a small e or easily factorizable n or some other vulnerability.
 
 ## Robin's Wish
-Connect to server and we can get the codeword. We can test our message and get the codeword on the server. e.g. input:2 -> output:4 , input:'gg' -> output: 700713841 == `((103*256 + 103)^2)` 
+Connect to server and we can get the codeword. We can test our message and get the codeword on the server. e.g. input:2 -> output:4 , input:'gg' -> output: 700713841 = `((103*256 + 103)^2)` 
 
 ### Solution
 > First we assume the codeword should be the square of the message, BUT we check the codeword of flag and it is not a perfect square. So we test 10^x (x = 0 -> inf), and the result is usually its square. But when we reach x = 104 ,the output is not as expected. We found the border between 13e104 to 14e104. Then we guess the encryption formula = `x^2 mod(blah)`, and found blah to be the distance between square(14e104) and its codeword. 
@@ -51,37 +50,41 @@ Connect to server and we can get the codeword. We can test our message and get t
 
 ![](src/rabin.png)
 > solution [here](src/sqrt.py)
+
 ### Flag
+`X-MAS{4cTu4lLy_15s_Sp3lLeD_r4b1n_n07_r0b1n_69316497123aaed43fc0}`
 
 ### Notes
+We spent some time figuring out the encryption system, seems like crypto problems are often transformations of rsa...
 
 ## Santa's crackme
 Input the license key and the binary will tell you correct or not
 ![](src/stacra.PNG)
+
 ### Solution
 > Use ltrace and input a LONG key like this.
 ![](src/stacra1.PNG)
 > Then we can figure out that the left column is like to be the XOR of our input and `something` and the right column is XOR of `flag` and `something` , So Let's run the binary again with input = right column then get the flag(with ltrace on).
 
 ### Flag
-`X-MAS{54n74_15_b4d_47_l1c3n53_ch3ck1n6}}`
-### Notes
-
+`X-MAS{54n74_15_b4d_47_l1c3n53_ch3ck1n6}`
 
 ## Reverthable X-Math
 This is a simple LISP program with a short output
 `47/22/9/55/-41/59/39/97/-38/-38/108/42/41/-47/-46/-38/-38/22/46/110/22/46/23/20/45/46/47/20/-45/46/103/0`
 > source [here](src/task.lsp)
+
 ### Solution
 > Go to an online compiler and test some 1-byte different input, figuring out that the same character result to same answer regardless of the location (1 to 1 function). 
 > We can observe the output and see that the flag has length 32, then we can test the bits one by one and get the flag.
+
 ### Flag
 `X-MAS{= l0v3 (+ 5t4llm4n 54n74)}`
-### Notes
 
 ## SN0WVERFL0W
 This is a simple bof problem. Only NX is enabled, so there is no canary or PIE. 
 The program asks you if you want to build a snowman, takes a line of input, then sends a line in reply. The challenge does not contain source code, but it does attach a dockerfile from ubuntu 18.04.
+
 ### Solution
 > I threw the binary into IDA because it was stripped and I didn't want to reverse it with gdb. You can see that there is a variable `flag` stored in the binary(in plaintext), but it is **redacted** in the given binary so you must print it out on the server. Also we can read the elfsymbols from gdb.
 
@@ -122,15 +125,16 @@ Good Luck.
 
 Server will return the distance between your input and the real word(not flag), so this is a guess-number(word) game.
 
-
 ### Solution
 > We have to guess the real word with lowest tries, the answer-set is `[a-z][A-Z]` so my algorithm is: first guess `z` and `A` ,if A is closer, then guess k,l.....etc (always guess the middle).
-We can get the correct one by expection around 9.25 times per character.
-
+> We can get the correct one by expection around 9.25 times per character.
 > solution [here](src/Orakel.py)
+
 ### Flag
 ![](src/Orakel.PNG)
+
 ### Notes
+Server may timeout randomly :(
 
 ## FUNction Plotter
 We connect to the server and is required to answer 961 math problems such as `f(23,4)=?`. 
@@ -141,10 +145,11 @@ We connect to the server and is required to answer 961 math problems such as `f(
 > After a while my boyfriend told me the math problems were coordinates, so I reran my script and recorded the coordinates, then printed out the matrix. 961 is the square of 31, which is definitely something like QRcode. We solved another QRcode problem last time so we threw the image matrix into this [site](https://bahamas10.github.io/binary-to-qrcode/?fbclid=IwAR2ijmgcNm_NJe6Yb_DDIs2eTJuKeGvAq3YgqsBjZp_pGYYroHcaTE01PUg) and got this QRcode. Scan it and we get our flag!
 
 ![](src/qrcode.png)
-
 > solution [here](src/func.py)
+
 ### Flag
 `X-MAS{Th@t's_4_w31rD_fUnCt10n!!!_8082838205}`
+
 ### Notes
 Fun challenge! 
 
@@ -160,5 +165,6 @@ We connect to the server and enter Santa's decoration shop! It's a menu challeng
 ![](src/pyexp.png)
 ### Flag
 as above...
+
 ### Notes
 Fun challenge! Learned something about python format strings!
