--- a/XMAS CTF 2019/X-MAS2019.md
+++ b/XMAS CTF 2019/X-MAS2019.md
@@ -1,4 +1,5 @@
 # X-MAS CTF 2019 writeup
+* solved by: unicorn011, iamsteven
 * 2019/12/13 - 2019/12/20
 * Crypto: [Mata Nui's Cookie](#Mata-Nui's-Cookie), [DeFUNct Ransomware](#DeFUNct-Ransomware), [Robin's Wish](#Robin's-Wish)
 * Reverse: [Santa's crackme](#Santa's-crackme), [Reverthable X-Math](#Reverthable-X-Math)
@@ -11,6 +12,7 @@
 ** solution code for is in src folder **
 
 ## Mata Nui's Cookie
+* solved by unicorn011
 This challenge was categorized as crypto but it has nothing to do with crypto really...
 We get an image this image
 ![](src/matanui.png)
@@ -25,6 +27,7 @@ We get an image this image
 fun but too easy haha.
 
 ## DeFUNct Ransomware
+* solved by unicorn011
 This is a textbook RSA problem. We get a text file containing `n` and `e`, and another encrypted file.
 
 ### Solution
@@ -41,6 +44,7 @@ This is a textbook RSA problem. We get a text file containing `n` and `e`, and a
 This is similar to other simple crypto problems. Usually you either get a small e or easily factorizable n or some other vulnerability.
 
 ## Robin's Wish
+* solved by together
 Connect to server and we can get the codeword. We can test our message and get the codeword on the server. e.g. input:2 -> output:4 , input:'gg' -> output: 700713841 = `((103*256 + 103)^2)` 
 
 ### Solution
@@ -58,6 +62,7 @@ Connect to server and we can get the codeword. We can test our message and get t
 We spent some time figuring out the encryption system, seems like crypto problems are often transformations of rsa...
 
 ## Santa's crackme
+* solved by iamsteven
 Input the license key and the binary will tell you correct or not
 ![](src/stacra.PNG)
 
@@ -70,6 +75,7 @@ Input the license key and the binary will tell you correct or not
 `X-MAS{54n74_15_b4d_47_l1c3n53_ch3ck1n6}`
 
 ## Reverthable X-Math
+* solved by iamsteven
 This is a simple LISP program with a short output
 `47/22/9/55/-41/59/39/97/-38/-38/108/42/41/-47/-46/-38/-38/22/46/110/22/46/23/20/45/46/47/20/-45/46/103/0`
 > source [here](src/task.lsp)
@@ -82,6 +88,7 @@ This is a simple LISP program with a short output
 `X-MAS{= l0v3 (+ 5t4llm4n 54n74)}`
 
 ## SN0WVERFL0W
+* solved by unicorn011
 This is a simple bof problem. Only NX is enabled, so there is no canary or PIE. 
 The program asks you if you want to build a snowman, takes a line of input, then sends a line in reply. The challenge does not contain source code, but it does attach a dockerfile from ubuntu 18.04.
 
@@ -99,6 +106,7 @@ The program asks you if you want to build a snowman, takes a line of input, then
 I didn't try to get shell because I found the flag in the binary. On second thought, if we had to read the flag from another file on the server, we could have chained rop and read input after leaking libc.
 
 ## Sequel Fun
+* solved by together
 We see a typical login prompt.
 
 ### Solution
@@ -113,6 +121,7 @@ We see a typical login prompt.
 .....this is even easier than our lab practices....
 
 ## Orakel
+* solved by iamsteven
 Santa told me about you...
 
 I will give you the True Flag you seek, but for that you must pass my test:
@@ -137,6 +146,7 @@ Server will return the distance between your input and the real word(not flag), 
 Server may timeout randomly :(
 
 ## FUNction Plotter
+* solved by unicorn011
 We connect to the server and is required to answer 961 math problems such as `f(23,4)=?`. 
 
 ### Solution
@@ -154,6 +164,7 @@ We connect to the server and is required to answer 961 math problems such as `f(
 Fun challenge! 
 
 ## SNT DCR SHP
+* solved by iamsteven
 We connect to the server and enter Santa's decoration shop! It's a menu challenge like the pwn challenges. In the challenge we can: add new decoration, view shopping list, or ask santa for suggestion(print source code).
 
 ### Solution
